# forge-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
evaluation/: artifacts.py  backfill_baseline_holdout_artifacts.py  compare.py  optimize_baselines.py  passive_benchmarks.py  result_utils.py  resume_sac_v4.py  statistical_tests.py  train_rl.py  train_rl_v3.py  train_rl_v4.py  train_rl_v5.py  train_rl_v6.py  train_rl_zec.py
evaluation/results/: baselines_btc.json  baselines_zec.json  comparison.csv  comparison.json  comparison.txt  passive_benchmarks.json  rl_btc_ppo_v6.json  statistical_tests.json
examples/: bb_reversion.py  buy_and_hold.py  macd_momentum.py  rsi_reversal.py  sma_cross.py
examples_rl/: tune_btc_ppo.py
examples_rl/btc_dqn/: btc_dqn.py
examples_rl/btc_ppo/: btc_ppo.py
examples_rl/btc_ppo_v6/: btc_ppo_v6.py
examples_rl/zec_ppo/: zec_ppo.py
forge_engine/: __init__.py  engine.py  indexer.py  indicators.py  metrics.py  optuna_optimizer.py  strategy.py  trading.py
forge_engine/rl/: __init__.py  actions.py  agent_strategy.py  env.py  observations.py  rewards.py  train.py
src/: data.rs  engine.rs  indicators.rs  lib.rs  types.rs  vectorized.rs
src/rl/: actions.rs  mod.rs  observations.rs  rewards.rs
tests/: test_e2e_integration.py  test_evaluation_artifacts.py  test_rl_fast_path.py  test_rust_engine.py
