[project]
name = "engine"
version = "0.1.0"
description = "Forge Engine - High-performance algorithmic trading framework"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "optuna>=4.6.0",
    "numpy>=2.1.0",
    "stable-baselines3[extra]>=2.3.0",
    "gymnasium>=1.0.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "forge_engine._rust_core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
