[project]
name = "forge-engine"
version = "0.1.0"
description = "Forge Engine - High-performance algorithmic trading framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"
dependencies = [
    "optuna>=4.6.0",
    "numpy>=2.1.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=1.0.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "."
module-name = "forge_engine._rust_core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7,<2.0",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
markers = [
    "timeout(value): test-level timeout marker used by long-running integration checks",
]
